Revert "chore: format with prettier"
This reverts commit be154cd82e4ce0fa6698a90d25eaee728ee5b226.

--- a/src/pages/get-started/setup-clerk.mdx
+++ b/src/pages/get-started/setup-clerk.mdx
@@ -1,5 +1,5 @@
-import { Cards } from "@/components/Cards";
-import { Steps } from "nextra-theme-docs";
+import {Cards} from "@/components/Cards";
+import { Steps } from 'nextra-theme-docs'
 
 # Setup Clerk
 
@@ -10,7 +10,6 @@ Let's set up a new Clerk account and integrate it into a new application.
 
 You might want to [check out one of our migration guides](/migrations-deployments/migrate-from/overview) to help
 you move your data to Clerk.
-
 </details>
 
 Creating a Clerk account and using it in your apps is a simple three-step process:
@@ -114,5 +113,4 @@ Creating a Clerk account and using it in your apps is a simple three-step proces
             />
         </div>
     </div>
-
 </Steps>
