--- a/src/pages/quickstarts/frontend/react.mdx
+++ b/src/pages/quickstarts/frontend/react.mdx
@@ -2,7 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import { Images } from "@/components/Images";
-import { Cards } from "@/components/Cards";
+import {Cards} from "@/components/Cards";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Use Clerk with React
@@ -13,10 +13,16 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
 
-<CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
-  ``` bash filename="your-project" copy npm install @clerk/clerk-react ``` ```
-  bash filename="your-project" copy yarn add @clerk/clerk-react ``` ``` bash
-  filename="your-project" copy pnpm i @clerk/clerk-react ```
+<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
+  ``` bash filename="your-project" copy
+  npm install @clerk/clerk-react
+  ```
+   ``` bash filename="your-project" copy
+   yarn add @clerk/clerk-react
+   ```
+  ``` bash filename="your-project" copy
+  pnpm i @clerk/clerk-react
+  ```
 </CodeBlockTabs>
 
 ## Set Environment Keys
@@ -37,7 +43,7 @@ import "./App.css";
 import { ClerkProvider } from "@clerk/clerk-react";
 
 if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw new Error("Missing Publishable Key");
+  throw new Error("Missing Publishable Key")
 }
 const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
 
@@ -69,7 +75,7 @@ import {
 } from "@clerk/clerk-react";
 
 if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw "Missing Publishable Key";
+  throw "Missing Publishable Key"
 }
 
 const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
@@ -111,7 +117,7 @@ import {
 import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
 
 if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw new Error("Missing Publishable Key");
+  throw new Error("Missing Publishable Key")
 }
 
 const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
@@ -138,7 +144,10 @@ function ClerkProviderWithRoutes() {
   const navigate = useNavigate();
 
   return (
-    <ClerkProvider publishableKey={clerkPubKey} navigate={(to) => navigate(to)}>
+    <ClerkProvider
+      publishableKey={clerkPubKey}
+      navigate={(to) => navigate(to)}
+    >
       <Routes>
         <Route path="/" element={<PublicPage />} />
         <Route
@@ -152,14 +161,14 @@ function ClerkProviderWithRoutes() {
         <Route
           path="/protected"
           element={
-            <>
-              <SignedIn>
-                <ProtectedPage />
-              </SignedIn>
-              <SignedOut>
-                <RedirectToSignIn />
-              </SignedOut>
-            </>
+          <>
+            <SignedIn>
+              <ProtectedPage />
+            </SignedIn>
+             <SignedOut>
+              <RedirectToSignIn />
+           </SignedOut>
+          </>
           }
         />
       </Routes>
@@ -247,5 +256,5 @@ Now you have an application integrated with Clerk you will want to read the foll
       link="/sdk/shared/use-auth"
       cta="Learn More"
     />
-  </div>
+   </div>
 </div>
