--- a/src/pages/quickstarts/full-stack/redwood.mdx
+++ b/src/pages/quickstarts/full-stack/redwood.mdx
@@ -2,7 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import { Images } from "@/components/Images";
-import { Cards } from "@/components/Cards";
+import {Cards} from "@/components/Cards";
 
 # Use Clerk with RedwoodJS
 
@@ -39,8 +39,7 @@ yarn rw setup auth clerk --force
 ```
 
 <Callout type="info">
-  The --force flag is needed to overwrite the existing dbAuth logic, that is set
-  by default.
+The --force flag is needed to overwrite the existing dbAuth logic, that is set by default.
 </Callout>
 
 You can now access Clerk functions through the Redwood `useAuth()` hook, which is exported from `src/web/auth.tsx`, or you can use the Clerk components directly.
@@ -50,10 +49,10 @@ You can now access Clerk functions through the Redwood `useAuth()` hook, which i
 Below is an example of using the `useAuth` hook to verify if the user is authenticated, this will open a modal for your user to sign in to their account.
 
 ```tsx filename="index.tsx" copy
-import { useAuth } from "../../auth";
+import { useAuth } from '../../auth'
 
 const HomePage = () => {
-  const { currentUser, isAuthenticated, logIn, logOut } = useAuth();
+  const { currentUser, isAuthenticated, logIn, logOut } = useAuth()
 
   return (
     <>
@@ -64,20 +63,20 @@ const HomePage = () => {
       )}
       {isAuthenticated && <h1>Hello {currentUser.firstName}</h1>}
     </>
-  );
-};
+  )
+}
 
-export default HomePage;
+export default HomePage
 ```
 
 ### Using Clerk components directly
 
 ```tsx filename="index.tsx" copy
-import { SignInButton, UserButton } from "@clerk/clerk-react";
-import { useAuth } from "../../auth";
+import { SignInButton, UserButton } from '@clerk/clerk-react'
+import { useAuth } from '../../auth'
 
 const HomePage = () => {
-  const { currentUser, isAuthenticated } = useAuth();
+  const { currentUser, isAuthenticated } = useAuth()
 
   return (
     <>
@@ -88,8 +87,8 @@ const HomePage = () => {
       )}
       {isAuthenticated && <h1>Hello {currentUser.firstName}</h1>}
     </>
-  );
-};
+  )
+}
 ```
 
 ## Next Steps
@@ -116,5 +115,5 @@ Now you have an application integrated with Clerk you will want to read the foll
       link="/sdk/shared/use-auth"
       cta="Learn More"
     />
-  </div>
+   </div>
 </div>
