--- a/src/pages/quickstarts/native/expo.mdx
+++ b/src/pages/quickstarts/native/expo.mdx
@@ -2,12 +2,13 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import { Images } from "@/components/Images";
-import { Cards } from "@/components/Cards";
+import {Cards} from "@/components/Cards";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Use Clerk with Expo
 
 Learn how to use Clerk to quickly and easily add secure authentication and user management to your Expo application.
+
 
 ## Install @clerk/clerk-expo
 
@@ -15,12 +16,20 @@ Once you have a Expo application ready, you need to install Clerk's Expo SDK.
 
 <Tabs items={["npm", "yarn", "pnpm"]}>
   <Tab>
-    ``` bash filename="your-project" copy npm install @clerk/clerk-expo ```
+  ``` bash filename="your-project" copy
+  npm install @clerk/clerk-expo
+  ```
   </Tab>
   <Tab>
-    ``` bash filename="your-project" copy yarn add @clerk/clerk-expo ```
+   ``` bash filename="your-project" copy
+   yarn add @clerk/clerk-expo
+   ```
+   </Tab>
+  <Tab>
+  ``` bash filename="your-project" copy
+  pnpm i @clerk/clerk-expo
+  ```
   </Tab>
-  <Tab>``` bash filename="your-project" copy pnpm i @clerk/clerk-expo ```</Tab>
 </Tabs>
 
 ## Mount `<ClerkProvider>`
@@ -34,7 +43,7 @@ import React from "react";
 import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider } from "@clerk/clerk-expo";
 
-const CLERK_PUBLISHABLE_KEY = "pk_test_••••••••••••••••••••••••••••••••••";
+const CLERK_PUBLISHABLE_KEY = "pk_test_••••••••••••••••••••••••••••••••••"
 export default function App() {
   return (
     <ClerkProvider publishableKey={CLERK_PUBLISHABLE_KEY}>
@@ -64,7 +73,7 @@ import React from "react";
 import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
 
-const CLERK_PUBLISHABLE_KEY = "pk_test_••••••••••••••••••••••••••••••••••";
+const CLERK_PUBLISHABLE_KEY = "pk_test_••••••••••••••••••••••••••••••••••"
 export default function App() {
   return (
     <ClerkProvider publishableKey={CLERK_PUBLISHABLE_KEY}>
@@ -73,7 +82,7 @@ export default function App() {
           <Text>You are Signed in</Text>
         </SignedIn>
         <SignedOut>
-          <Text>You are Signed out</Text>
+        <Text>You are Signed out</Text>
         </SignedOut>
       </SafeAreaView>
     </ClerkProvider>
@@ -93,9 +102,7 @@ const styles = StyleSheet.create({
 Using expo requires you to create custom flows in our quickstart guide, we are going to show you how to create a sign in and sign up flow using the `useSignIn` and `useSignUp` hooks.
 
 <Callout type="warning">
-  The following flows are built on the default instance settings for Clerk. If
-  you have changed your instance settings, you may need to make changes to the
-  following code.
+The following flows are built on the default instance settings for Clerk. If you have changed your instance settings, you may need to make changes to the following code.
 </Callout>
 
 ## Build Your Sign Up
@@ -202,7 +209,7 @@ export default function SignUpScreen() {
 ```
 
 <Callout type="info">
-  Now would be good a time to test your sign up flow.
+Now would be good a time to test your sign up flow.
 </Callout>
 
 Make sure you update your `app` file to use the component that you have created, to keep it simple we will add the `SignUpScreen` to the `SignedOut` component.
@@ -297,8 +304,7 @@ export default function SignInScreen() {
 ```
 
 <Callout type="info">
-  Now would be good a time to test your sign in flow. Restart your server to
-  remove the session.
+Now would be good a time to test your sign in flow. Restart your server to remove the session.
 </Callout>
 
 Make sure you update your `app` file to use the component that you have created, replace the `SignUpScreen` with the `SignInScreen` to the `SignedOut` component.
@@ -383,14 +389,18 @@ const SignInWithOAuth = () => {
     }
   }, []);
 
-  return <Button title="Sign in with Google" onPress={onPress} />;
-};
+  return (
+    <Button
+      title="Sign in with Google"
+      onPress={onPress}
+    />
+  );
+}
 export default SignInWithOAuth;
 ```
 
 <Callout type="info">
-  Now would be good a time to test your OAuth flow. Restart your server to
-  remove the session.
+Now would be good a time to test your OAuth flow. Restart your server to remove the session.
 </Callout>
 
 Make sure you update your `app` file to use the component that you have created, replace the `SignInScreen` with the `SignInWithOAuth` to the `SignedOut` component.
@@ -426,6 +436,7 @@ const styles = StyleSheet.create({
 });
 ```
 
+
 ## Adding a token cache
 
 A token cache is important for persisting your JWT. By default Clerk holds it in memory, however this method shouldn't be used for Production applications.
@@ -436,11 +447,20 @@ You can use it as your client JWT storage by setting the `tokenCache` prop in yo
 ### Install expo-secure-store
 
 <Tabs items={["npm", "yarn", "pnpm"]}>
-  <Tab>``` bash filename="terminal" copy npm install expo-secure-store ```</Tab>
-  <Tab>``` bash filename="terminal" copy yarn add expo-secure-store ```</Tab>
   <Tab>
-    ``` bash filename="your-project" copy pnpm install install expo-secure-store
-    ```
+  ``` bash filename="terminal" copy
+  npm install expo-secure-store
+  ```
+  </Tab>
+  <Tab>
+   ``` bash filename="terminal" copy
+  yarn add expo-secure-store
+   ```
+   </Tab>
+  <Tab>
+  ``` bash filename="your-project" copy
+  pnpm install install expo-secure-store
+  ```
   </Tab>
 </Tabs>
 
@@ -500,7 +520,6 @@ const styles = StyleSheet.create({
 ```
 
 ## Signing a user out
-
 To sign a user out you can use the `signOut` method from the `useAuth` hook. This will remove the JWT from the token cache and remove the session.
 
 ```tsx filename="app.tsx" copy
@@ -582,6 +601,7 @@ Clerk provides a set of hooks and helpers that you can use to access the active 
 
 The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
+
 ```tsx copy filename="components/UseAuthExample.tsx"
 import { useAuth } from "@clerk/clerk-expo";
 import { Text } from "react-native";
@@ -633,5 +653,5 @@ Now you have an application integrated with Clerk you will want to read the foll
       link="/sdk/shared/use-auth"
       cta="Learn More"
     />
-  </div>
+   </div>
 </div>
