--- a/src/pages/reference-react/authentication/sign-in.mdx
+++ b/src/pages/reference-react/authentication/sign-in.mdx
@@ -17,6 +17,8 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 The `<SignIn/>` component renders a UI for signing in users. The functionality of the `<SignIn/>` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.dev). You can further customize your `<SignIn/>` component by passing additional properties at the time of rendering.
 
+
+
 ## Usage
 
 Below is basic implementation of the `<SignIn/>` component. You can use this as a starting point for your own implementation
@@ -26,16 +28,20 @@ Below is basic implementation of the `<SignIn/>` component. You can use this as 
 import { SignIn } from "@clerk/nextjs";
 
 const SignInPage = () => (
-
 <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
-); export default SignInPage; ``` ```jsx copy filename="/pages/sign-in/[[...index]].tsx"
-import {SignIn} from "@clerk/react";
+);
+export default SignInPage;
+```
+```jsx copy filename="/pages/sign-in/[[...index]].tsx"
+import { SignIn } from "@clerk/react";
 
 const SignInPage = () => (
-
 <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
-); export default SignInPage; ``` ```jsx copy filename="app/routes/sign-in/$.tsx"
-import {SignIn} from "@clerk/remix";
+);
+export default SignInPage;
+```
+```jsx copy filename="app/routes/sign-in/$.tsx"
+import { SignIn } from "@clerk/remix";
 
 export default function SignInPage() {
   return (
