--- a/src/pages/reference-react/authentication/user-button.mdx
+++ b/src/pages/reference-react/authentication/user-button.mdx
@@ -30,29 +30,27 @@ import {
 
 function Header() {
 return (
-
-<header
-  style={{ display: "flex", justifyContent: "space-between", padding: 20 }}
->
-  <h1>My App</h1>
-  <SignedIn>
-    {/* Mount the UserButton component */}
-    <UserButton />
-  </SignedIn>
-  <SignedOut>
-    {/* Signed out users get sign in button */}
-    <SignInButton />
-  </SignedOut>
-</header>
-); }
+    <header style={{ display: "flex", justifyContent: "space-between", padding: 20 }}>
+      <h1>My App</h1>
+      <SignedIn>
+        {/* Mount the UserButton component */}
+        <UserButton />
+      </SignedIn>
+      <SignedOut>
+        {/* Signed out users get sign in button */}
+        <SignInButton />
+      </SignedOut>
+    </header>
+);
+}
 
 function MyApp({ pageProps }) {
-return (
-
-<ClerkProvider {...pageProps}>
-  <Header />
-</ClerkProvider>
-); }
+  return (
+    <ClerkProvider {...pageProps}>
+      <Header />
+    </ClerkProvider>
+  );
+}
 
 export default MyApp;
 ```
@@ -69,60 +67,62 @@ import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
 const clerk_pub_key = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
 
 function PublicPage() {
-return (
-
-<>
-  <h1>Public page</h1>
-  <a href="/protected">Go to protected page</a>
-</>
-); }
+    return (
+      <>
+        <h1>Public page</h1>
+        <a href="/protected">Go to protected page</a>
+      </>
+    );
+}
 
 function ProtectedPage() {
-return (
-
-<>
-  <h1>Protected page</h1>
-  <UserButton />
-</>
-); }
+  return (
+      <>
+        <h1>Protected page</h1>
+        <UserButton />
+      </>
+    );
+}
 
 function ClerkProviderWithRoutes() {
-const navigate = useNavigate();
+  const navigate = useNavigate();
 
-return (
-
-<ClerkProvider publishableKey={clerk_pub_key} navigate={(to) => navigate(to)}>
-  <Routes>
-    <Route path="/" element={<PublicPage />} />
-    <Route
-      path="/sign-in/_"
-      element={<SignIn routing="path" path="/sign-in" />}
-    />
-    <Route
-      path="/sign-up/_"
-      element={<SignUp routing="path" path="/sign-up" />}
-    />
-    <Route
-      path="/protected"
-      element={
-        <SignedIn>
-          <ProtectedPage />
-        </SignedIn>
-      }
-    />
-  </Routes>
-</ClerkProvider>
-); }
+  return (
+    <ClerkProvider
+      publishableKey={clerk_pub_key}
+      navigate={(to) => navigate(to)}>
+        <Routes>
+          <Route path="/" element={<PublicPage />} />
+          <Route
+          path="/sign-in/*"
+          element={<SignIn routing="path" path="/sign-in" />}
+          />
+          <Route
+          path="/sign-up/*"
+          element={<SignUp routing="path" path="/sign-up" />}
+          />
+          <Route
+            path="/protected"
+            element={
+              <SignedIn>
+                <ProtectedPage />
+              </SignedIn>
+            }
+          />
+        </Routes>
+      </ClerkProvider>
+    );
+}
 
 function App() {
-return (
+  return (
+    <BrowserRouter>
+      <ClerkProviderWithRoutes />
+    </BrowserRouter>
+  );
+}
 
-<BrowserRouter>
-  <ClerkProviderWithRoutes />
-</BrowserRouter>
-); }
-
-````
+```
 ```tsx filename="router/index.tsx" copy
 import {
   UserButton,
@@ -147,8 +147,7 @@ export default function Index() {
     </div>
   );
 }
-````
-
+```
 </CodeBlockTabs>
 ## Props
 
