--- a/src/pages/reference-react/customization/appearance.mdx
+++ b/src/pages/reference-react/customization/appearance.mdx
@@ -14,10 +14,20 @@ The appearance prop can be applied to `<ClerkProvider/>` to share styles across 
 We offer a set of themes that can be used with the `appearance` prop. The themes are available as a package called `@clerk/themes`.
 
 <Tabs items={["npm", "yarn", "pnpm"]}>
-  <Tab>``` bash filename="your-project" copy npm install @clerk/themes ```</Tab>
-  <Tab>``` bash filename="your-project" copy yarn add @clerk/themes ```</Tab>
   <Tab>
-    ``` bash filename="your-project" copy pnpm install @clerk/themes ```
+  ``` bash filename="your-project" copy
+  npm install @clerk/themes
+  ```
+  </Tab>
+  <Tab>
+  ``` bash filename="your-project" copy
+  yarn add @clerk/themes
+  ```
+  </Tab>
+  <Tab>
+    ``` bash filename="your-project" copy
+     pnpm install @clerk/themes
+    ```
   </Tab>
 </Tabs>
 
@@ -30,15 +40,15 @@ import { ClerkProvider, SignIn } from '@clerk/nextjs';
 import type { AppProps } from "next/app";
 
 function MyApp({ pageProps }: AppProps) {
-return (
-
-<ClerkProvider
-appearance={{
+  return (
+    <ClerkProvider
+      appearance={{
         baseTheme: dark
-      }} >
-<Component {...pageProps}>
-</ClerkProvider>
-)
+      }}
+    >
+      <Component {...pageProps}>
+    </ClerkProvider>
+  )
 }
 
 export default MyApp;
@@ -50,22 +60,19 @@ import { dark } from '@clerk/themes';
 import { ClerkProvider } from "@clerk/clerk-react";
 
 if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-throw new Error("Missing Publishable Key")
+  throw new Error("Missing Publishable Key")
 }
 const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
 
 function App() {
-return (
-
-<ClerkProvider
-  appearance={{
-    baseTheme: dark,
-  }}
-  publishableKey={clerkPubKey}
->
-  <div>Hello from clerk</div>
-</ClerkProvider>
-); }
+  return (
+    <ClerkProvider appearance={{
+      baseTheme: dark
+      }} publishableKey={clerkPubKey}>
+      <div>Hello from clerk</div>
+    </ClerkProvider>
+  );
+}
 
 export default App;
 ```
@@ -96,21 +103,21 @@ export const meta: MetaFunction = () => ({
 export const loader: LoaderFunction = (args) => rootAuthLoader(args);
 
 function App() {
-return (
-
-<html lang="en">
-  <head>
-    <Meta />
-    <Links />
-  </head>
-  <body>
-    <Outlet />
-    <ScrollRestoration />
-    <Scripts />
-    <LiveReload />
-  </body>
-</html>
-); }
+  return (
+    <html lang="en">
+      <head>
+        <Meta />
+        <Links />
+      </head>
+      <body>
+        <Outlet />
+        <ScrollRestoration />
+        <Scripts />
+        <LiveReload />
+      </body>
+    </html>
+  );
+}
 
 export default ClerkApp(App, {
   appearance: {
