--- a/src/pages/reference-react/customization/localization.mdx
+++ b/src/pages/reference-react/customization/localization.mdx
@@ -20,13 +20,19 @@ The `@clerk/localizations` package contains predefined localizations for the Cle
 
 <Tabs items={["npm", "yarn", "pnpm"]}>
   <Tab>
-    ``` bash filename="your-project" copy npm install @clerk/localizations ```
+    ``` bash filename="your-project" copy
+    npm install @clerk/localizations
+    ```
   </Tab>
   <Tab>
-    ``` bash filename="your-project" copy yarn add @clerk/localizations ```
+    ``` bash filename="your-project" copy
+    yarn add @clerk/localizations
+    ```
   </Tab>
   <Tab>
-    ``` bash filename="your-project" copy pnpm install @clerk/localizations ```
+    ``` bash filename="your-project" copy
+    pnpm install @clerk/localizations
+    ```
   </Tab>
 </Tabs>
 
