--- a/src/pages/advanced-usage/clerk-idp.mdx
+++ b/src/pages/advanced-usage/clerk-idp.mdx
@@ -1,11 +1,12 @@
 import { Callout } from "nextra-theme-docs";
 import { Images } from "@/components/Images";
 
-# Use Clerk as an OAuth 2 Provider
+# Use Clerk as an OAuth 2 Provider 
 
-Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients that support the OAuth 2.0 protocol.
+Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients that support the OAuth 2.0 protocol. 
 
-&nbsp;
+&nbsp;  
+
 
 <Images
   width={2279}
@@ -14,16 +15,18 @@ Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients tha
   alt="Clerk IDP Flow"
 />
 
+
 ## Step 1: Retrieve Callback URL from the client application
 
 Retrieve the **Callback URL** for the client application you want to configure. This is where your users will be redirected to after a successful authentication and is required to successfully create your OAuth application in the next step.
+
 
 ## Step 2: Create an OAuth Application in Clerk
 
 Next, you need to create an OAuth Application in Clerk via the [Backend API](https://clerk.com/docs/reference/backend-api/tag/OAuth-Applications) by providing the Callback URL and a Name. Note that in this context the name is used to help you identify your application and is not displayed anywhere publicly.
 
 ```sh copy filename="POST /v1/oauth_applications"
-curl
+curl 
  -X POST https://api.clerk.com/v1/oauth_applications \
  -H "Authorization: Bearer <CLERK_SECRET_KEY>"  \
  -H "Content-Type: application/json" \
@@ -32,37 +35,38 @@ curl
 
 Clerk creates an OAuth application and returns it's configurations back to you.
 
+
 ```json copy filename="RESPONSE"
 {
-  "object": "oauth_application",
-  "id": "oa_2O4BCh3zUONvWlZHtBXv6s6tm7u",
-  "instance_id": "ins_2O4Ak02T4fDmKKv6tK5h0WJ8ou8",
-  "name": "oauth_app_1",
-  "client_id": "d9g4CT4WYiCBm7EU",
-  "client_secret": "VVgbT7i6sPo7sTljq2zj12fjmg0jPL5k",
-  "scopes": "profile email",
-  "callback_url": "https://oauth-client.com/oauth2/callback",
-  "authorize_url": "https://clerk.your-domain.com/oauth/authorize",
-  "token_fetch_url": "https://clerk.your-domain.com/oauth/token",
-  "user_info_url": "https://clerk.your-domain.com/oauth/userinfo",
-  "created_at": 1680809847940,
-  "updated_at": 1680810135145
+    "object":"oauth_application",
+    "id":"oa_2O4BCh3zUONvWlZHtBXv6s6tm7u",
+    "instance_id":"ins_2O4Ak02T4fDmKKv6tK5h0WJ8ou8",
+    "name":"oauth_app_1",
+    "client_id":"d9g4CT4WYiCBm7EU",
+    "client_secret":"VVgbT7i6sPo7sTljq2zj12fjmg0jPL5k",
+    "scopes":"profile email",
+    "callback_url":"https://oauth-client.com/oauth2/callback",
+    "authorize_url":"https://clerk.your-domain.com/oauth/authorize",
+    "token_fetch_url":"https://clerk.your-domain.com/oauth/token",
+    "user_info_url":"https://clerk.your-domain.com/oauth/userinfo",
+    "created_at":1680809847940,
+    "updated_at":1680810135145
 }
 ```
 
 <Callout type="warning" emoji="⚠️">
-  For security reasons, we don’t store your Client Secret and cannot show it to
-  you again, so we recommend you download the secret and store it someplace
-  secure.
+  For security reasons, we don’t store your Client Secret and cannot show it to you again, so we recommend you download the secret and store it someplace secure.
 </Callout>
+
 
 ## Step 3: Configure OAuth Application in client
 
 Now that you have setup an OAuth application in Clerk, you will need to configure these settings in your Client.
 
-- **Client ID**: Public identifier of your OAuth application
-- **Client Secret**: Confidential secret used to authenticate your OAuth application
-- **Authorization URL**: Used by the Client to request authorization from your user
-- **Token URL**: Used by the Client to retrieve access tokens
-- **Scopes**: OAuth scopes used to grant access to the Client. Clerk only supports `profile` and `email` at this point
-- **User Info URL**: Used by the Client to retrieve the email address and profile (username, first and last name) associated to your user
+* **Client ID**: Public identifier of your OAuth application
+* **Client Secret**: Confidential secret used to authenticate your OAuth application
+* **Authorization URL**: Used by the Client to request authorization from your user
+* **Token URL**: Used by the Client to retrieve access tokens
+* **Scopes**: OAuth scopes used to grant access to the Client. Clerk only supports `profile` and `email` at this point
+* **User Info URL**: Used by the Client to retrieve the email address and profile (username, first and last name) associated to your user 
+
