--- a/src/pages/quickstarts/full-stack/stable.mdx
+++ b/src/pages/quickstarts/full-stack/stable.mdx
@@ -2,7 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import { Images } from "@/components/Images";
-import { Cards } from "@/components/Cards";
+import {Cards} from "@/components/Cards";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Use Clerk with Next.js
@@ -18,10 +18,16 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to prebuilt components and hooks, as well as our helpers for Next.js API routes, server-side rendering, and middleware.
 
-<CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
-  ``` bash filename="your-project" copy npm install @clerk/nextjs ``` ``` bash
-  filename="your-project" copy yarn add @clerk/nextjs ``` ``` bash
-  filename="your-project" copy pnpm i @clerk/nextjs ```
+<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
+  ``` bash filename="your-project" copy
+  npm install @clerk/nextjs
+  ```
+  ``` bash filename="your-project" copy
+   yarn add @clerk/nextjs
+   ```
+   ``` bash filename="your-project" copy
+   pnpm i @clerk/nextjs
+   ```
 </CodeBlockTabs>
 
 ## Set Environment Keys
@@ -90,9 +96,7 @@ To make sure you are using the embedded components you will need to update your 
 />
 
 <Callout type="info" emoji="ℹ️">
-  By default, the Clerk components inherit the font family. With create-next-app
-  they don't apply a global font family. When you launch your application you
-  may notice that the font family is different.
+  By default, the Clerk components inherit the font family. With create-next-app they don't apply a global font family. When you launch your application you may notice that the font family is different.
 </Callout>
 
 ## Add Middleware
@@ -120,7 +124,7 @@ export const config = {
     "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
   ],
-};
+}
 ```
 
 ## Protecting Your Pages
@@ -176,7 +180,7 @@ export const config = {
     "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
   ],
-};
+}
 ```
 
 </Tab>
@@ -199,10 +203,7 @@ import { useRouter } from "next/router";
 //   "/foo"           for pages/foo/index.js
 //   "/foo/bar"       for pages/foo/bar.js
 //   "/foo/[...bar]"  for pages/foo/[...bar].js
-const publicPages: Array<string> = [
-  "/sign-in/[[...index]]",
-  "/sign-up/[[...index]]",
-];
+const publicPages: Array<string> = ["/sign-in/[[...index]]", "/sign-up/[[...index]]"];
 
 function MyApp({ Component, pageProps }: AppProps) {
   // Get the pathname
@@ -392,5 +393,5 @@ Now you have an application integrated with Clerk you will want to read the foll
       link="/sdk/shared/use-auth"
       cta="Learn More"
     />
-  </div>
+   </div>
 </div>
