--- a/src/pages/reference-react/user-management/signed-in.mdx
+++ b/src/pages/reference-react/user-management/signed-in.mdx
@@ -4,11 +4,9 @@ import { Tab, Tabs } from "nextra-theme-docs";
 # `<SignedIn>`
 
 ## Overview
-
 The `<SignedIn/>` component offers authentication checks as a cross-cutting concern. Any children components wrapped by a `<SignedIn/>` component will be rendered only if there's a User with an active Session signed in your application.
 
 ## Usage
-
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```jsx copy filename="app.tsx"
@@ -21,19 +19,19 @@ import {
 import { AppProps } from "next/app";
 
 function MyApp({ Component, pageProps }: AppProps) {
-return (
-
-<ClerkProvider {...pageProps}>
-  <SignedIn>
-    <div>You are signed in</div>
-  </SignedIn>
-  <div>Always visible</div>
-</ClerkProvider>
-); }
+  return (
+    <ClerkProvider {...pageProps}>
+      <SignedIn>
+        <div>You are signed in</div>
+      </SignedIn>
+      <div>Always visible</div>
+    </ClerkProvider>
+  );
+}
 
 export default MyApp;
 
-````
+```
 </Tab>
 <Tab>
 ```jsx copy filename="app.tsx"
@@ -56,8 +54,7 @@ function Page() {
     </ClerkProvider>
   );
 }
-````
-
+```
 </Tab>
 <Tab>
 ```tsx filename="routes/index.tsx" copy
@@ -86,13 +83,16 @@ export default function Index() {
 Below is an example of how to use `<SignedIn/>` with React Router. The `<SignedIn/>` component can be used as a child of a `<Route/>` component to render content only to signed in users.
 
 ```jsx copy filename="app.tsx"
-import { Routes, Route } from "react-router-dom";
-import { ClerkProvider, SignedIn } from "@clerk/clerk-react";
+import { Routes, Route } from 'react-router-dom';
+import {
+  ClerkProvider,
+  SignedIn,
+} from "@clerk/clerk-react";
 
 function App() {
   return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-      <Routes>
+      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+        <Routes>
         <Route
           path="/"
           element={<div>This page is publicly accessible.</div>}
@@ -106,7 +106,7 @@ function App() {
           }
         />
       </Routes>
-    </ClerkProvider>
+      </ClerkProvider>
   );
 }
 ```
