--- a/src/pages/reference-react/user-management/signed-out.mdx
+++ b/src/pages/reference-react/user-management/signed-out.mdx
@@ -6,7 +6,6 @@ import { Tab, Tabs } from "nextra-theme-docs";
 The `<SignedOut/>` component offers authentication checks as a cross-cutting concern. Any child nodes wrapped by a `<SignedOut/>` component will be rendered only if there's no User signed in to your application.
 
 ## Usage
-
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```jsx copy filename="app.tsx"
@@ -19,15 +18,15 @@ import {
 import { AppProps } from "next/app";
 
 function MyApp({ Component, pageProps }: AppProps) {
-return (
-
-<ClerkProvider {...pageProps}>
-  <SignedOut>
-    <div>You are signed Out</div>
-  </SignedOut>
-  <div>Always visible</div>
-</ClerkProvider>
-); }
+  return (
+    <ClerkProvider {...pageProps}>
+      <SignedOut>
+        <div>You are signed Out</div>
+      </SignedOut>
+      <div>Always visible</div>
+    </ClerkProvider>
+  );
+}
 
 export default MyApp;
 ```
@@ -37,19 +36,22 @@ export default MyApp;
 import { SignedOut, ClerkProvider } from "@clerk/clerk-react";
 
 function Page() {
-return (
-
-<ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-  <section>
-    <div>This content is always visible.</div>
-    <SignedOut>
-      <div>This content is visible only to signed out users.</div>
-    </SignedOut>
-  </section>
-</ClerkProvider>
-); }
-
-````
+  return (
+    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      <section>
+        <div>
+          This content is always visible.
+        </div>
+        <SignedOut>
+          <div>
+            This content is visible only to signed out users.
+          </div>
+        </SignedOut>
+      </section>
+    </ClerkProvider>
+  );
+}
+```
 
 ### Usage with React Router
 
@@ -83,8 +85,7 @@ function App() {
       </ClerkProvider>
   );
 }
-````
-
+```
 </Tab>
 <Tab>
 ```tsx filename="routes/index.tsx" copy
